<resources>
    <string name="app_name">BandMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="quit">Quit</string>
    <string name="logout">Logout</string>
    <string name="usernamePrompt">Username</string>
    <string name="first_namePrompt">First Name</string>
    <string name="last_namePrompt">Last Name</string>
    <string name="emailPrompt">Email</string>
    <string name="phone_numberPrompt">Phone Number</string>
    <string name="enter_passwordPrompt">Enter Password</string>
    <string name="confirm_passwordPrompt">Confirm Password</string>
    <string name="enter_birthdayPrompt">Enter Birthday</string>
    <string name="malePrompt">Male</string>
    <string name="femalePrompt">Female</string>
    <string name="otherPrompt">Other</string>
    <string name="secondaryInstrumentPrompt">Enter any other instruments you play?</string>
    <string name="secondaryGenrePrompt">Enter any other genres you like to play</string>
    <string name="sign_upPrompt">Sign Up</string>
    <string name="passwordPrompt">Password</string>
    <string name="loginPrompt">Login</string>

    <string name="profileUsername">Username</string>
    <string name="profileFirstName">Name</string>
    <string name="profileLastName">Last Name</string>
    <string name="profileGender">Gender</string>
    <string name="profileBirthday">Birthday</string>
    <string name="profileInstrumentPrimary">Primary Instrument</string>
    <string name="profileInstrumentSecondary">Secondary Instrument</string>
    <string name="profileGenre">Genre</string>

    <string name="cancelPrompt">Cancel</string>
    <string name="name">Name</string>
    <string name="primary_genre">Primary Genre</string>
    <string name="secondary_genre">Secondary Genre</string>
    <string name="primary_instrument">Primary Instrument</string>
    <string name="secondary_instrument">Secondary Instrument</string>
    <string name="message_hint">Send a message</string>
    <string name="send">send</string>

    <string-array name="instruments">
        <item name="select">Primary Instrument</item>
        <item name="guitar">Guitar</item>
        <item name="piano">Piano</item>
        <item name="ukulele">Ukulele</item>
        <item name="drums">Drums</item>
        <item name="vocals">Vocals</item>
        <item name="producer">Producer</item>
    </string-array>

    <string-array name="genres">
        <item name="select">Primary Genre</item>
        <item name="rock">Rock</item>
        <item name="jazz">Jazz</item>
        <item name="pop">Pop</item>
        <item name="metal">Metal</item>
        <item name="classical">Classical</item>
        <item name="folk">Folk</item>
        <item name="alternative">Alternative</item>
        <item name="electronic">Electronic</item>
    </string-array>
</resources>