<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.EditProfileFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewProfilePic"
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButtonProfilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignEnd="@+id/imageViewProfilePic"
            android:layout_alignBottom="@+id/imageViewProfilePic"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_twotone_add_a_photo_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageViewProfilePic"
            android:layout_marginTop="10dp"
            android:divider="@android:drawable/divider_horizontal_textfield"
            android:orientation="vertical"
            android:showDividers="middle|beginning|end">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLines="1"
                tools:text="Rico Nasty" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerPrimaryGenre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/editTextSecondaryGenre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:ems="10"
                    android:hint="@string/secondary_genre"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerPrimaryInstrument"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/editTextSecondaryInstrument"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:ems="10"
                    android:hint="@string/secondary_instrument"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextBio"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="About Me..."
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textViewMP3Prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Upload an MP3 file to share your music"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <ImageButton
                android:id="@+id/imageButtonUploadMP3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_cloud_upload_24" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save Changes" />

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Exit Without Saving" />


        </LinearLayout>

    </RelativeLayout>
</ScrollView>